2007-08-02  Jie Zhang  <jie.zhang@analog.com>

	* Makefile (LIBBFDSP_ASRCS): Add fract28_4mul.asm and
	fract24_8mul.asm.
	* fract28_4mul.asm: New.
	* fract24_8mul.asm: New.

2007-08-01  Jie Zhang  <jie.zhang@analog.com>

	* countll.c: Processed with c_fix_builtins.sed.

2007-07-24  Jie Zhang  <jie.zhang@analog.com>

	* Makefile: Only build and archive complex fuctions when
	libc doesn't have them.
	Fix the rules for updating archive members.

2007-07-23  Jie Zhang  <jie.zhang@analog.com>

	* fir_decima16.asm: Remove trailing ; of #endif.
	* polar16.c (_polar_fr16): The least short is 0xffff8000
	instead of 0x8000.
	* sqrt_fr16.asm: Don't use HI and LO.
	* rms_fr16.asm: Replace BITPOS(BIT0_MASK) with 0.
